# VibeAround

./: .gitignore  README.md  README_CN.md
src/: .gitignore  BUILD.md  package.json  settings.json.example  settings.json.min  (+1 more)
src/core/: Cargo.toml
src/core/src/: config.rs  db.rs  headless.rs  im.rs  lib.rs  message_hub.rs  project.rs  pty.rs  service.rs  session.rs  session_store.rs  tunnels.rs  workspace.rs
src/core/src/agent/: claude_acp.rs  claude_sdk.rs  codex_acp.rs  codex_jsonl.rs  gemini_acp.rs  manager_prompt.rs  mod.rs  opencode_acp.rs  opencode_jsonl.rs  registry.rs
src/core/src/agent_manager/: mod.rs
src/core/src/channel_manager/: mod.rs
src/core/src/channel_manager/channels/: mod.rs  web.rs
src/core/src/channels/: mod.rs  plugin.rs
src/core/src/headless/: context.rs  runners.rs
src/core/src/headless/runners/: claude.rs
src/core/src/hub/: agent_hub.rs  channel_hub.rs  mod.rs  session_hub.rs  types.rs
src/core/src/hub/channels/: web.rs
src/core/src/im/: channels.rs  commands.rs  daemon.rs  event_log.rs  log.rs  message_hub.rs  router.rs  session.rs  session_store.rs  spec.rs  transport.rs  worker.rs
src/core/src/im/channels/: feishu.rs  telegram.rs
src/core/src/im/channels/feishu/: interaction.rs  mod.rs  transport.rs  webhook.rs
src/core/src/im/channels/plugin/: mod.rs  transport.rs
src/core/src/im/channels/telegram/: mod.rs  receiver.rs  transport.rs
src/core/src/pty/: manager.rs  mod.rs  runtime.rs  session.rs
src/core/src/session_hub/: mod.rs  types.rs
src/core/src/tunnels/: cloudflare.rs  localtunnel.rs  ngrok.rs
(+56 files in other folders)
